4. Ingress tanımı ile dışardan trafik alması için domain ayarı/rgb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2022-09-05T10:46:42Z"
  generation: 1
  name: rgb
  namespace: default
  resourceVersion: "2887"
  uid: 716bff4d-d2e7-4a20-a729-2561517994d6
spec:
  rules:
  - host: red.192.168.25.144.nip.io
    http:
      paths:
      - backend:
          service:
            name: red
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: green.192.168.25.144.nip.io
    http:
      paths:
      - backend:
          service:
            name: green
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: blue.192.168.25.144.nip.io
    http:
      paths:
      - backend:
          service:
            name: blue
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.25.144
